added header section

--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
             </ul>
         </nav>
         <div class="banner">
-            <div
-                class="banner-content">
+            <div class="banner-content">
                 <h3  class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-title">
                     Mahmudul Hasan
                     Chowdary</h1>
-                <p>Shot what able cold
+                <p class="banner-para">Shot what able cold
                     new see
                     hold.Friendly as an
                     betrayed formerly
@@ -52,8 +51,7 @@
                     as to society
                     behaved moments.</p>
                 <button
-                    class="btn-primary">Download
-                    CV</button>
+                    class="btn-primary">Download CV</button>
                 <button
                     class="btn-primary">Contact</button>
             </div>
