--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h3  class="banner-greeting">Hi, I am</h3>
-                <h1 class="banner-title">
+                <h3
+                    class="banner-greeting">
+                    Hi, I am</h3>
+                <h1
+                    class="banner-title">
                     Mahmudul Hasan
                     Chowdary</h1>
-                <p class="banner-para">Shot what able cold
+                <p class="banner-para">
+                    Shot what able cold
                     new see
                     hold.Friendly as an
                     betrayed formerly
@@ -51,7 +55,8 @@
                     as to society
                     behaved moments.</p>
                 <button
-                    class="btn-primary">Download CV</button>
+                    class="btn-primary">Download
+                    CV</button>
                 <button
                     class="btn-primary">Contact</button>
             </div>
@@ -64,7 +69,47 @@
 
     </header>
     <main>
+        <section class="about">
+            <h3 class="about-title">
+                About Me</h3>
+            <p class="about-description">
+                I, m a designer &
+                developer with a passion
+                for web design. I enjoy
+                developing simple, clean
+                and slick websites that
+                provide real value to
+                the end user. Thousands
+                of clients have procured
+                exceptional resulfs
+                while working with me.
+                Delivering work within
+                time and budget which
+                meets clients
+                requirements in our
+                mata.
+            </p>
+            <div class="info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-description">Mahmudul Hasan Chowdary</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-description">mahmudul01.0hassan@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth:</h4>
+                    <p class="info-description">25 April 1998</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-description">Bangladesh</p>
+                </div>
+            </div>
 
+        </section>
+        
     </main>
     <footer>
 
