--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
         <section class="about">
             <h3 class="about-title">
                 About Me</h3>
-            <p class="about-description">
-                I, m a designer &
+            <p
+                class="about-description">
+                I, am a Computer Engineer and also a designer &
                 developer with a passion
                 for web design. I enjoy
                 developing simple, clean
@@ -91,25 +92,157 @@
             </p>
             <div class="info-container">
                 <div class="about-info">
-                    <h4 class="info-title">Name:</h4>
-                    <p class="info-description">Mahmudul Hasan Chowdary</p>
+                    <h4
+                        class="info-title">
+                        Name:</h4>
+                    <p
+                        class="info-description">
+                        Mahmudul Hasan
+                        Chowdary</p>
                 </div>
                 <div class="about-info">
-                    <h4 class="info-title">Email:</h4>
-                    <p class="info-description">mahmudul01.0hassan@gmail.com</p>
+                    <h4
+                        class="info-title">
+                        Email:</h4>
+                    <p
+                        class="info-description">
+                        mahmudul01.0hassan@gmail.com
+                    </p>
                 </div>
                 <div class="about-info">
-                    <h4 class="info-title">Date of birth:</h4>
-                    <p class="info-description">25 April 1998</p>
+                    <h4
+                        class="info-title">
+                        Date of birth:
+                    </h4>
+                    <p
+                        class="info-description">
+                        25 April 1998
+                    </p>
                 </div>
                 <div class="about-info">
-                    <h4 class="info-title">From:</h4>
-                    <p class="info-description">Bangladesh</p>
+                    <h4
+                        class="info-title">
+                        From:</h4>
+                    <p
+                        class="info-description">
+                        Dhaka,Bangladesh</p>
                 </div>
             </div>
 
         </section>
-        
+        <!-- what i do section start  -->
+        <section>
+            <h3 class="what-i-do-title">
+                What I do</h3>
+            <p id="what-i-do-description"
+                class="section-description">
+                I have more than 6 months experience
+                building software for
+                clients all over the
+                world. Below is a quick
+                overview of my main
+                technical skill sets and
+                technologies i use. Want
+                to find out more about
+                my experience? Check out
+                my online resume and
+                project portfolio.
+            </p>
+            <div
+                class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png"
+                        alt="">
+                    <h3
+                        class="skill-title">
+                        Vanilla
+                        JavaScript</h3>
+                    <p
+                        class="skill-description">
+                        List
+                        skill/technologies
+                        here. You can
+                        change the icon
+                        above to any of
+                        the 1500+
+                        FontAwesome 5
+                        free icons
+                        available.
+                        Aenean commodo
+                        ligula eget
+                        dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png"
+                        alt="">
+                    <h3
+                        class="skill-title">
+                        React</h3>
+                    <p
+                        class="skill-description">
+                        List
+                        skill/technologies
+                        here. You can
+                        change the icon
+                        above to any of
+                        the 1500+
+                        FontAwesome 5
+                        free icons
+                        available.
+                        Aenean commodo
+                        ligula eget
+                        dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png"
+                        alt="">
+                    <h3
+                        class="skill-title">
+                        Node.js
+                    </h3>
+                    <p
+                        class="skill-description">
+                        List
+                        skill/technologies
+                        here. You can
+                        change the icon
+                        above to any of
+                        the 1500+
+                        FontAwesome 5
+                        free icons
+                        available.
+                        Aenean commodo
+                        ligula eget
+                        dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png"
+                        alt="">
+                    <h3
+                        class="skill-title">
+                        MongoDB
+                    </h3>
+                    <p
+                        class="skill-description">
+                        List
+                        skill/technologies
+                        here. You can
+                        change the icon
+                        above to any of
+                        the 1500+
+                        FontAwesome 5
+                        free icons
+                        available.
+                        Aenean commodo
+                        ligula eget
+                        dolor.
+                    </p>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
