--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                 About Me</h3>
             <p
                 class="about-description">
-                I, am a Computer Engineer and also a designer &
+                I, am a Computer
+                Engineer and also a
+                designer &
                 developer with a passion
                 for web design. I enjoy
                 developing simple, clean
@@ -125,7 +127,8 @@
                         From:</h4>
                     <p
                         class="info-description">
-                        Dhaka,Bangladesh</p>
+                        Dhaka,Bangladesh
+                    </p>
                 </div>
             </div>
 
@@ -136,7 +139,8 @@
                 What I do</h3>
             <p id="what-i-do-description"
                 class="section-description">
-                I have more than 6 months experience
+                I have more than 6
+                months experience
                 building software for
                 clients all over the
                 world. Below is a quick
@@ -240,6 +244,206 @@
                         dolor.
                     </p>
                 </div>
+            </div>
+        </section>
+
+        <section>
+            <h1 class="resume-heading">A
+                summary of My Resume
+            </h1>
+            <div class="resume-container">
+                <div class="education">
+                    <h2
+                        class="resume-title">
+                        My Education
+                    </h2>
+                    <div class="resume-item">
+                    <h3
+                        class="education-title">
+                        Bachelor in
+                        Computer Science
+                        and Engineering
+                    </h3>
+                    <h3
+                        class="institute-duration">
+                        Southwest
+                        University of
+                        Science and
+                        Technology /
+                        2019 - 2023</h3>
+                    <p
+                        class="education-description">
+                        List
+                        skill/technologies
+                        here. You can
+                        change the icon
+                        above
+                        to any of the
+                        1500+
+                        FontAwesome 5
+                        free icons
+                        available.
+                        Aenean commodo
+                        ligula eget
+                        dolor.</p>
+                </div>
+                <hr>
+                <div class="education">
+                    <h3
+                        class="education-title">
+                        Bachelor in
+                        Computer
+                        Engineering</h3>
+                    <h4
+                        class="institute-duration">
+                        Southwest
+                        University of
+                        Science and
+                        Technology</h4>
+                    <p
+                        class="education-description">
+                        List
+                        skill/technologies
+                        here. You can
+                        change the icon
+                        above
+                        to any of the
+                        1500+
+                        FontAwesome 5
+                        free icons
+                        available.
+                        Aenean commodo
+                        ligula eget
+                        dolor.</p>
+                </div>
+                <hr>
+                <div class="education">
+                    <h3
+                        class="education-title">
+                        Bachelor in
+                        Computer
+                        Engineering</h3>
+                    <h4
+                        class="institute-duration">
+                        Southwest
+                        University of
+                        Science and
+                        Technology</h4>
+                    <p
+                        class="education-description">
+                        List
+                        skill/technologies
+                        here. You can
+                        change the icon
+                        above
+                        to any of the
+                        1500+
+                        FontAwesome 5
+                        free icons
+                        available.
+                        Aenean commodo
+                        ligula eget
+                        dolor.</p>
+                </div>
+            </div>
+
+                <div class="experience">
+                    <h2
+                        class="resume-title">
+                        My Experience
+                    </h2>
+                    <div class="resume-item">
+                    <h3
+                        class="education-title">
+                        Bachelor in
+                        Computer Science
+                        and Engineering
+                    </h3>
+                    <h3
+                        class="institute-duration">
+                        Southwest
+                        University of
+                        Science and
+                        Technology /
+                        2019 - 2023</h3>
+                    <p
+                        class="education-description">
+                        List
+                        skill/technologies
+                        here. You can
+                        change the icon
+                        above
+                        to any of the
+                        1500+
+                        FontAwesome 5
+                        free icons
+                        available.
+                        Aenean commodo
+                        ligula eget
+                        dolor.</p>
+                </div>
+                <hr>
+                <div class="experience">
+                    <h3
+                        class="education-title">
+                        Bachelor in
+                        Computer
+                        Engineering</h3>
+                    <h4
+                        class="institute-duration">
+                        Southwest
+                        University of
+                        Science and
+                        Technology</h4>
+                    <p
+                        class="education-description">
+                        List
+                        skill/technologies
+                        here. You can
+                        change the icon
+                        above
+                        to any of the
+                        1500+
+                        FontAwesome 5
+                        free icons
+                        available.
+                        Aenean commodo
+                        ligula eget
+                        dolor.</p>
+                </div>
+                <hr>
+                <div class="experience">
+                    <h3
+                        class="education-title">
+                        Bachelor in
+                        Computer
+                        Engineering</h3>
+                    <h4
+                        class="institute-duration">
+                        Southwest
+                        University of
+                        Science and
+                        Technology</h4>
+                    <p
+                        class="education-description">
+                        List
+                        skill/technologies
+                        here. You can
+                        change the icon
+                        above
+                        to any of the
+                        1500+
+                        FontAwesome 5
+                        free icons
+                        available.
+                        Aenean commodo
+                        ligula eget
+                        dolor.</p>
+                </div>
+            </div>
+            </div>
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
 
