--- a/index.html
+++ b/index.html
@@ -251,205 +251,286 @@
             <h1 class="resume-heading">A
                 summary of My Resume
             </h1>
-            <div class="resume-container">
+            <div
+                class="resume-container">
                 <div class="education">
                     <h2
                         class="resume-title">
                         My Education
                     </h2>
-                    <div class="resume-item">
-                    <h3
-                        class="education-title">
-                        Bachelor in
-                        Computer Science
-                        and Engineering
-                    </h3>
-                    <h3
-                        class="institute-duration">
-                        Southwest
-                        University of
-                        Science and
-                        Technology /
-                        2019 - 2023</h3>
-                    <p
-                        class="education-description">
-                        List
-                        skill/technologies
-                        here. You can
-                        change the icon
-                        above
-                        to any of the
-                        1500+
-                        FontAwesome 5
-                        free icons
-                        available.
-                        Aenean commodo
-                        ligula eget
-                        dolor.</p>
+                    <div
+                        class="resume-item">
+                        <h3
+                            class="education-title">
+                            Bachelor in
+                            Computer
+                            Science
+                            and
+                            Engineering
+                        </h3>
+                        <h3
+                            class="institute-duration">
+                            Southwest
+                            University
+                            of
+                            Science and
+                            Technology /
+                            2019 - 2023
+                        </h3>
+                        <p
+                            class="education-description">
+                            List
+                            skill/technologies
+                            here. You
+                            can
+                            change the
+                            icon
+                            above
+                            to any of
+                            the
+                            1500+
+                            FontAwesome
+                            5
+                            free icons
+                            available.
+                            Aenean
+                            commodo
+                            ligula eget
+                            dolor.</p>
+                    </div>
+                    <hr>
+                    <div
+                        class="education">
+                        <h3
+                            class="education-title">
+                            Bachelor in
+                            Computer
+                            Engineering
+                        </h3>
+                        <h4
+                            class="institute-duration">
+                            Southwest
+                            University
+                            of
+                            Science and
+                            Technology
+                        </h4>
+                        <p
+                            class="education-description">
+                            List
+                            skill/technologies
+                            here. You
+                            can
+                            change the
+                            icon
+                            above
+                            to any of
+                            the
+                            1500+
+                            FontAwesome
+                            5
+                            free icons
+                            available.
+                            Aenean
+                            commodo
+                            ligula eget
+                            dolor.</p>
+                    </div>
+                    <hr>
+                    <div
+                        class="education">
+                        <h3
+                            class="education-title">
+                            Bachelor in
+                            Computer
+                            Engineering
+                        </h3>
+                        <h4
+                            class="institute-duration">
+                            Southwest
+                            University
+                            of
+                            Science and
+                            Technology
+                        </h4>
+                        <p
+                            class="education-description">
+                            List
+                            skill/technologies
+                            here. You
+                            can
+                            change the
+                            icon
+                            above
+                            to any of
+                            the
+                            1500+
+                            FontAwesome
+                            5
+                            free icons
+                            available.
+                            Aenean
+                            commodo
+                            ligula eget
+                            dolor.</p>
+                    </div>
                 </div>
-                <hr>
-                <div class="education">
-                    <h3
-                        class="education-title">
-                        Bachelor in
-                        Computer
-                        Engineering</h3>
-                    <h4
-                        class="institute-duration">
-                        Southwest
-                        University of
-                        Science and
-                        Technology</h4>
-                    <p
-                        class="education-description">
-                        List
-                        skill/technologies
-                        here. You can
-                        change the icon
-                        above
-                        to any of the
-                        1500+
-                        FontAwesome 5
-                        free icons
-                        available.
-                        Aenean commodo
-                        ligula eget
-                        dolor.</p>
-                </div>
-                <hr>
-                <div class="education">
-                    <h3
-                        class="education-title">
-                        Bachelor in
-                        Computer
-                        Engineering</h3>
-                    <h4
-                        class="institute-duration">
-                        Southwest
-                        University of
-                        Science and
-                        Technology</h4>
-                    <p
-                        class="education-description">
-                        List
-                        skill/technologies
-                        here. You can
-                        change the icon
-                        above
-                        to any of the
-                        1500+
-                        FontAwesome 5
-                        free icons
-                        available.
-                        Aenean commodo
-                        ligula eget
-                        dolor.</p>
-                </div>
-            </div>
 
                 <div class="experience">
                     <h2
                         class="resume-title">
                         My Experience
                     </h2>
-                    <div class="resume-item">
-                    <h3
-                        class="education-title">
-                        Bachelor in
-                        Computer Science
-                        and Engineering
-                    </h3>
-                    <h3
-                        class="institute-duration">
-                        Southwest
-                        University of
-                        Science and
-                        Technology /
-                        2019 - 2023</h3>
-                    <p
-                        class="education-description">
-                        List
-                        skill/technologies
-                        here. You can
-                        change the icon
-                        above
-                        to any of the
-                        1500+
-                        FontAwesome 5
-                        free icons
-                        available.
-                        Aenean commodo
-                        ligula eget
-                        dolor.</p>
+                    <div
+                        class="resume-item">
+                        <h3
+                            class="education-title">
+                            Bachelor in
+                            Computer
+                            Science
+                            and
+                            Engineering
+                        </h3>
+                        <h3
+                            class="institute-duration">
+                            Southwest
+                            University
+                            of
+                            Science and
+                            Technology /
+                            2019 - 2023
+                        </h3>
+                        <p
+                            class="education-description">
+                            List
+                            skill/technologies
+                            here. You
+                            can
+                            change the
+                            icon
+                            above
+                            to any of
+                            the
+                            1500+
+                            FontAwesome
+                            5
+                            free icons
+                            available.
+                            Aenean
+                            commodo
+                            ligula eget
+                            dolor.</p>
+                    </div>
+                    <hr>
+                    <div
+                        class="experience">
+                        <h3
+                            class="education-title">
+                            Bachelor in
+                            Computer
+                            Engineering
+                        </h3>
+                        <h4
+                            class="institute-duration">
+                            Southwest
+                            University
+                            of
+                            Science and
+                            Technology
+                        </h4>
+                        <p
+                            class="education-description">
+                            List
+                            skill/technologies
+                            here. You
+                            can
+                            change the
+                            icon
+                            above
+                            to any of
+                            the
+                            1500+
+                            FontAwesome
+                            5
+                            free icons
+                            available.
+                            Aenean
+                            commodo
+                            ligula eget
+                            dolor.</p>
+                    </div>
+                    <hr>
+                    <div
+                        class="experience">
+                        <h3
+                            class="education-title">
+                            Bachelor in
+                            Computer
+                            Engineering
+                        </h3>
+                        <h4
+                            class="institute-duration">
+                            Southwest
+                            University
+                            of
+                            Science and
+                            Technology
+                        </h4>
+                        <p
+                            class="education-description">
+                            List
+                            skill/technologies
+                            here. You
+                            can
+                            change the
+                            icon
+                            above
+                            to any of
+                            the
+                            1500+
+                            FontAwesome
+                            5
+                            free icons
+                            available.
+                            Aenean
+                            commodo
+                            ligula eget
+                            dolor.</p>
+                    </div>
                 </div>
-                <hr>
-                <div class="experience">
-                    <h3
-                        class="education-title">
-                        Bachelor in
-                        Computer
-                        Engineering</h3>
-                    <h4
-                        class="institute-duration">
-                        Southwest
-                        University of
-                        Science and
-                        Technology</h4>
-                    <p
-                        class="education-description">
-                        List
-                        skill/technologies
-                        here. You can
-                        change the icon
-                        above
-                        to any of the
-                        1500+
-                        FontAwesome 5
-                        free icons
-                        available.
-                        Aenean commodo
-                        ligula eget
-                        dolor.</p>
-                </div>
-                <hr>
-                <div class="experience">
-                    <h3
-                        class="education-title">
-                        Bachelor in
-                        Computer
-                        Engineering</h3>
-                    <h4
-                        class="institute-duration">
-                        Southwest
-                        University of
-                        Science and
-                        Technology</h4>
-                    <p
-                        class="education-description">
-                        List
-                        skill/technologies
-                        here. You can
-                        change the icon
-                        above
-                        to any of the
-                        1500+
-                        FontAwesome 5
-                        free icons
-                        available.
-                        Aenean commodo
-                        ligula eget
-                        dolor.</p>
-                </div>
-            </div>
             </div>
             <div class="download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button
+                    class="btn-primary">Download
+                    CV</button>
             </div>
         </section>
 
     </main>
     <footer>
+        <div class="footer-column">
+            <h3 class="footer-title">
+                Lets Connect</h3>
+                <p
+                class="footer-description">
+                Please fill out the form
+                on this section to
+                contact with me or call
+                between 9:00 A.M and
+                8.00 P.M ET, Monday
+                through Friday.</p>
+                <div class="footer-social">
+                    <a href="www.facebook.com"><img src="images/icons/facebook.png" alt=""></a>
+                    <a href="www.instagram.com"><img src="images/icons/insta.png" alt=""></a>
+                    <a href="www.twitter.com"><img src="images/icons/twitter.png" alt=""></a>
+                </div>
 
+        </div>
+        <div class="footer-column">
+            <h3 class="footer-title">
+                Let’s Message me</h3>
+           
+        </div>
     </footer>
 </body>
 
