--- a/index.html
+++ b/index.html
@@ -529,6 +529,12 @@
         <div class="footer-column">
             <h3 class="footer-title">
                 Let’s Message me</h3>
+                <form class="contact" action="">
+                    <input type="text" placeholder="Your Name">
+                    <input type="text" placeholder="Your Email">
+                    <textarea name="" id="" cols="30" rows="10">Message</textarea>
+                </form>
+                <button class="btn-primary">Submit</button>
            
         </div>
     </footer>
