added button icon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="style.css">
+        <script src="https://kit.fontawesome.com/e10b5ad6f4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -55,10 +56,9 @@
                     as to society
                     behaved moments.</p>
                 <button
-                    class="btn-primary">Download
-                    CV</button>
+                    class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button
-                    class="btn-primary">Contact</button>
+                    class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div>
                 <img class="profile-picture"
@@ -501,7 +501,7 @@
             </div>
             <div class="download-cv">
                 <button
-                    class="btn-primary">Download
+                    class="btn-primary"><i class="fa-solid fa-download"></i> Download
                     CV</button>
             </div>
         </section>
